--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 	<!-- FB meta tags -->
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://amilajack.github.io/chillnsound" />
+	<!-- <meta property="og:url" content="https://amilajack.github.io/chillnsound" /> -->
 	<meta property="og:title" content="Chill n' Sound - Relax with the sounds of Nautre" />
 	<meta property="og:description" content="Relax with sounds of nature! Play and Mix Ambient sounds to boost concentration and productivity. Create your perfect enviroment."
 	/>
-	<meta property="og:image" content="https://amilajack.github.io/chillnsound/src/images/socialpreview.png" />
+	<!-- <meta property="og:image" content="https://amilajack.github.io/chillnsound/src/images/socialpreview.png" /> -->
 	<meta property="og:image:width" content="747" />
 	<meta property="og:image:height" content="200" />
 
@@ -31,7 +31,7 @@
 	<meta name="twitter:title" content="Chill n' Sound - Relax with the sounds of Nautre" />
 	<meta name="twitter:description" content="Relax with sounds of nature! Play and Mix Ambient sounds to boost concentration and productivity. Create your perfect enviroment."
 	/>
-	<meta name="twitter:image" content="https://amilajack.github.io/chillnsound/src/images/socialpreview.png" />
+	<!-- <meta name="twitter:image" content="https://amilajack.github.io/chillnsound/src/images/socialpreview.png" /> -->
 
 	<!--build:css css/styles.min.css-->
 	<link rel="stylesheet" href="./src/css/normalize.css">
@@ -396,7 +396,7 @@
 			</span>
 			<span class="copyright">
 				Copyright © 2017 by
-				<a target="_blank" href="amilajack.github.io/chillnsound">Petrovic Stefan</a> | All rights reserved.
+				<!-- <a target="_blank" href="amilajack.github.io/chillnsound">Petrovic Stefan</a> | All rights reserved. -->
 			</span>
 
 			<span class="helpfooter">
@@ -406,10 +406,10 @@
 
 		<div class="social_icons">
 			<span class="share_icn fb_btn">
-				<div class="fb-share-button" data-href="https://amilajack.github.io/chillnsound" data-layout="button_count" data-size="small"
+				<!-- <div class="fb-share-button" data-href="https://amilajack.github.io/chillnsound" data-layout="button_count" data-size="small"
 				 data-mobile-iframe="true">
 					<a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%amilajack.github.io/chillnsound%2F&amp;src=sdkpreparse">Share</a>
-				</div>
+				</div> -->
 			</span>
 			<span class="share_icn">
 				<a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Chill%20n'%20Sound%20-%20Relax%20With%20the%20Sounds%20of%20Nature!">
